--- a/src/app/user/components/create-bill/create-bill.component.css
+++ b/src/app/user/components/create-bill/create-bill.component.css
@@ -142,7 +142,13 @@
     color: #666;
     flex: 1 1 auto;
   }
-
+  .mobile-card{
+    cursor: pointer; 
+  }
+  .mobile-card:hover{
+    transform: translateY(-2px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+  }
   /* Hide expandable fields by default */
   .mobile-card .expandable {
     display: none;
