--- a/src/app/user/components/bills/bills.component.html
+++ b/src/app/user/components/bills/bills.component.html
@@ -13,7 +13,7 @@
   <p class="mt-3">Loading bills...</p>
 </div>
 
-<div *ngIf="(bills.length > 0 || isSearchActive || sortColumn) && !(isLoading && !initialLoadComplete); else noBillsMessage">
+<div *ngIf="!isInitialEmpty; else noBillsMessage">
   <div class="main-content"></div>
   <div class="header-container d-flex align-items-center">
     <div class="back-btn-container">
